# lesoon-restful

./: .gitignore  README.md  setup.cfg  tox.ini
examples/: config.py  custom_manager_simple.py  custom_service_simple.py  mongo_nested_simple.py  mongo_simple.py  mongoengine_simple.py  sqlalchemy_simple.py
http/: custom_service_simple.http  mongo_nested_simple.http  mongo_simple.http  sqlalchemy_simple.http
requirements/: core.txt  dev.txt  tests.txt
src/lesoon_restful/: __init__.py  api.py  exceptions.py  filters.py  globals.py  manager.py  parser.py  resource.py  route.py  routes.py  service.py  signals.py
src/lesoon_restful/contrib/alchemy/: __init__.py  fields.py  filters.py  manager.py  model.py  schema.py
src/lesoon_restful/contrib/mongoengine/: fields.py  filters.py  manager.py  model.py  schema.py
src/lesoon_restful/dbengine/: __init__.py
src/lesoon_restful/dbengine/alchemy/: __init__.py  filters.py  service.py  utils.py
src/lesoon_restful/dbengine/alchemy/wrappers/: __init__.py  dataclass.py  service.py  utils.py
src/lesoon_restful/dbengine/memory/: __init__.py  service.py
src/lesoon_restful/dbengine/mongoengine/: __init__.py  filters.py  service.py
src/lesoon_restful/openapi/: __init__.py  base.py  marshmallow_apispec.py  utils.py
src/lesoon_restful/utils/: __init__.py  base.py  common.py  filters.py  openapi.py  req.py
tests/: conftest.py  test_api.py  test_filters.py  test_resource.py  test_route.py
tests/dbengine/alchemy/: models.py  service.py  test_filters.py  test_utils.py
tests/dbengine/mongoengine/: filters.py  models.py
tests/utils/: test_common.py  test_filters.py
