[metadata]
name = lesoon-restful
version = attr: lesoon_restful.__version__
author = huang.jw
author_email = huangjiawen@belle.net.cn
description = A Basic Web Structure For Lesoon Restful Application
keywords = Flask,SQLAlchemy,MongoEngine
classifiers =
    Development Status :: 1 - Start
    Environment :: Web Environment
    Framework :: Flask
    Framework :: Marshmallow
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8
include_package_data = True
zip_safe = False
install_requires =
    apispec==5.1.1
    flasgger==0.9.5
    Flask==2.0.1
    flask_mongoengine==1.0.0
    Flask_SQLAlchemy==2.5.1
    lesoon_common==0.0.3
    marshmallow==3.14.0
    SQLAlchemy==1.4.27
    webargs==8.0.1
    Werkzeug==2.0.1


[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::UserWarning

[yapf]
based_on_style = google

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
files = src/**/*.py
python_version = 3.8
strict_optional=False
show_error_codes = True
allow_redefinition = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False
ignore_missing_imports = True
